--- a/squid.conf
+++ b/squid.conf
@@ -1,6 +1,11 @@
 acl localnet src 10.0.0.0/8
 acl localnet src 172.16.0.0/12
-acl localnet src 192.168.0.0/16
+acl localnet src 192.168.0.0/24
+acl localnet src 192.168.0.1/24
+acl localnet src 192.168.0.2/24
+acl localnet src 192.168.0.3/24
+acl localnet src 192.168.0.4/24
+acl localnet src 192.168.0.5/24
 acl SSL_ports port 81 443 563
 acl Safe_ports port 20 21 70 80 81 210 280 443 488 563 591 631 777 901 3128 8080 1025-65535
 acl connect method CONNECT
@@ -154,12 +159,12 @@ ssl_bump none https_login
 ssl_bump none exc_ip
 ssl_bump server-first all
 http_access deny all
-https_port 3127 tproxy ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=4MB cert=/etc/squid3/myCA.pem
+https_port 3127 tproxy ssl-bump generate-host-certificates=on dynamic_cert_mem_cache_size=40MB cert=/etc/squid3/myCA.pem
 http_port 3128
 http_port 3129 tproxy
 
 
-sslcrtd_program /usr/lib/squid3/ssl_crtd -s /etc/squid3/ssl_db -M 4MB
+sslcrtd_program /usr/lib/squid3/ssl_crtd -s /etc/squid3/ssl_db -M 40MB
 sslcrtd_children 5
 sslproxy_cert_error allow all
 sslproxy_flags DONT_VERIFY_PEER
@@ -179,7 +184,7 @@ maximum_object_size 536870912 bytes
 minimum_object_size 16384 bytes
 #cache_dir aufs /cache/cache01 150000 300 256 min-size=0 max-size=262144
 #cache_dir aufs /cache/cache02 150000 300 256 min-size=262144 max-size=617611264
-cache_dir aufs /var/spool/squid3/cache 15000 16 256
+cache_dir aufs /var/spool/squid3/cache 133000 126 256
 cache_swap_low 98
 cache_swap_high 99
 
@@ -234,7 +239,7 @@ request_timeout 60 seconds
 half_closed_clients off
 shutdown_lifetime 10 seconds
 
-cache_mgr ucok_karnadi@yahoo.com
+cache_mgr kosasih850@gmail.com
 cache_effective_user proxy
 cache_effective_group proxy
 httpd_suppress_version_string on
