--- a/squid.conf
+++ b/squid.conf
@@ -42,6 +42,7 @@ acl Safe_ports port 777
 acl CONNECT method CONNECT
 
 acl porn url_regex -i "/etc/squid3/blok.txt"
+acl iklan url_regex -i "/etc/squid3/ad_block.txt"
 
 acl getmethod method GET
 
@@ -55,6 +56,7 @@ ssl_bump server-first all
 http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
 http_access deny porn
+http_access deny iklan
 http_access allow all
 http_reply_access allow all
 icp_access allow all
@@ -345,7 +347,7 @@ cache_effective_user proxy
 cache_effective_group proxy
 #dns_v4_first on
 
-dns_nameservers 8.8.8.8
+dns_nameservers 127.0.0.1
 
 vary_ignore_expire on
 
