--- a/squid.conf
+++ b/squid.conf
@@ -55,7 +55,9 @@ ssl_bump none adobe_flashplayer
 ssl_bump server-first all
 http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
-http_access deny porn
+##### PORN DI BLOCK DARI JAM #####
+##### Ubah jika tidak ingin di blok ###
+http_access deny porn time MTWHF 08:00-12:00
 http_access deny iklan
 http_access allow all
 http_reply_access allow all
