--- a/unbound.conf
+++ b/unbound.conf
@@ -4,7 +4,7 @@ statistics-interval: 120
 num-threads: 4
 statistics-cumulative: yes
 interface: 0.0.0.0
-port: 5353
+port: 53
  
 outgoing-range: 512
 num-queries-per-thread: 1024
@@ -41,8 +41,8 @@ access-control: 192.168.255.2/24 allow
 chroot: "/etc/unbound"
 username: "unbound"
 directory: "/etc/unbound"
-logfile: ""
-use-syslog: no
+logfile: "/etc/unbound/unbound.log"
+use-syslog: yes
 pidfile: "/etc/unbound/unbound.pid"
 root-hints: "/etc/unbound/named.cache"
  
