--- a/squid.conf
+++ b/squid.conf
@@ -57,7 +57,7 @@ http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
 ##### PORN DI BLOCK DARI JAM #####
 ##### Ubah jika tidak ingin di blok ###
-http_access deny porn time MTWHF 08:00-12:00
+http_access deny porn
 http_access deny iklan
 http_access allow all
 http_reply_access allow all
