--- a/httpd.conf
+++ b/httpd.conf
@@ -3,5 +3,5 @@ Alias /squidreport /var/www/squidanalyzer
 Options -Indexes FollowSymLinks MultiViews
 AllowOverride None
 Order deny,allow
-Allow from 192.168.255.2
+Allow from all
 </Directory>
