--- a/squid.conf
+++ b/squid.conf
@@ -41,9 +41,8 @@ acl Safe_ports port 591
 acl Safe_ports port 777
 acl CONNECT method CONNECT
 
-acl porn url_regex -i "/etc/squid3/blok.txt"
 acl iklan url_regex -i "/etc/squid3/ad_block.txt"
-
+http_access deny iklan
 acl getmethod method GET
 
 always_direct allow all
@@ -57,8 +56,12 @@ http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
 ##### PORN DI BLOCK DARI JAM #####
 ##### Ubah jika tidak ingin di blok ###
-http_access deny porn
-http_access deny iklan
+acl bokep time MTWHF 07:00-18:00
+acl bad url_regex "/etc/squid3/blok.txt"
+http_access deny bokep
+##### PORN DI BLOCK DARI JAM #####
+##### Ubah jika tidak ingin di blok ###
+
 http_access allow all
 http_reply_access allow all
 icp_access allow all
@@ -373,4 +376,5 @@ qos_flows local-hit=0x30
 # qos_flows parent-hit=0x32
 # preserve
 # qos_flows disable-preserve-miss 
+
 
