--- a/squid.conf
+++ b/squid.conf
@@ -42,7 +42,9 @@ acl Safe_ports port 777
 acl CONNECT method CONNECT
 
 acl iklan url_regex -i "/etc/squid3/ad_block.txt"
+acl blok url_regex -i "/etc/squid3/blok.txt"
 http_access deny iklan
+http_access deny blok
 acl getmethod method GET
 
 always_direct allow all
@@ -54,13 +56,18 @@ ssl_bump none adobe_flashplayer
 ssl_bump server-first all
 http_access deny !Safe_ports
 http_access deny CONNECT !SSL_ports
-##### PORN DI BLOCK DARI JAM #####
-##### Ubah jika tidak ingin di blok ###
+
+###################################################
+###################################################
+###################################################
+############ PORN DI BLOCK DARI JAM ###############
+######## Ubah jika tidak ingin di blok ############
+
 acl bokep time MTWHF 07:00-18:00
-acl bad url_regex "/etc/squid3/blok.txt"
-http_access deny bokep
-##### PORN DI BLOCK DARI JAM #####
-##### Ubah jika tidak ingin di blok ###
+
+###################################################
+###################################################
+###################################################
 
 http_access allow all
 http_reply_access allow all
