--- a/unbound.conf
+++ b/unbound.conf
@@ -1,74 +1,71 @@
 server:
+access-control: 127.0.0.0/8 allow
+access-control: 192.168.42.0/24 allow
+auto-trust-anchor-file: "/var/lib/unbound/root.key"
 verbosity: 1
 statistics-interval: 120
-num-threads: 4
-statistics-cumulative: yes
+num-threads: 1
 interface: 0.0.0.0
-port: 53
- 
 outgoing-range: 512
 num-queries-per-thread: 1024
- 
-msg-cache-size: 128m
-rrset-cache-size: 256m
-so-rcvbuf: 8m
- 
-msg-cache-slabs: 8
-rrset-cache-slabs: 8
-infra-cache-slabs: 8
-key-cache-slabs: 8
- 
-cache-min-ttl: 600
+msg-cache-size: 16m
+rrset-cache-size: 32m
+msg-cache-slabs: 4
+rrset-cache-slabs: 4
 cache-max-ttl: 86400
 infra-host-ttl: 60
 infra-lame-ttl: 120
- 
 infra-cache-numhosts: 10000
 infra-cache-lame-size: 10k
- 
 do-ip4: yes
-do-ip6: yes
+do-ip6: no
 do-udp: yes
 do-tcp: yes
 do-daemonize: yes
- 
-access-control: 127.0.0.0/8 allow
-access-control: 192.168.0.0/24 allow
-access-control: 172.16.0.0/12 allow
-access-control: 192.168.0.0/16 allow
-access-control: 192.168.255.2/24 allow
- 
-chroot: "/etc/unbound"
-username: "unbound"
-directory: "/etc/unbound"
-logfile: "/etc/unbound/unbound.log"
-use-syslog: yes
-pidfile: "/etc/unbound/unbound.pid"
-root-hints: "/etc/unbound/named.cache"
- 
+logfile: ""
+use-syslog: no
 identity: "DNS"
 version: "1.4"
 hide-identity: yes
 hide-version: yes
 harden-glue: yes
-use-caps-for-id: yes
-harden-dnssec-stripped: yes
 do-not-query-address: 127.0.0.1/8
 do-not-query-localhost: yes
 module-config: "iterator"
-  
+local-zone: "localhost." static
+local-data: "localhost. 10800 IN NS localhost."
+local-data: "localhost. 10800 IN SOA localhost. nobody.invalid. 1 3600 1200 604800 10800"
+local-data: "localhost. 10800 IN A 127.0.0.1"
+local-zone: "127.in-addr.arpa." static
+local-data: "127.in-addr.arpa. 10800 IN NS localhost."
+local-data: "127.in-addr.arpa. 10800 IN SOA localhost. nobody.invalid. 2 3600 1200 604800 10800"
+local-data: "1.0.0.127.in-addr.arpa. 10800 IN PTR localhost."
+local-zone: "ubuntuprecise.net." static
+local-data: "ubuntuprecise.net. 86400 IN NS ns1.ubuntuprecise.net."
+local-data: "ubuntuprecise.net. 86400 IN SOA ubuntuprecise.net. proxy.ubuntuprecise.net. 3 3600 1200 604800 86400"
+local-data: "ubuntuprecise.net. 86400 IN A 192.168.34.4"
+local-data: "www.ubuntuprecise.net. 86400 IN A 192.168.34.4"
+local-data: "ns1.ubuntuprecise.net. 86400 IN A 192.168.34.4" 
+local-data: "mail.ubuntuprecise.net. 86400 IN A 192.168.34.4"
+local-data: "ubuntuprecise.net. 86400 IN MX 10 mail.ubuntuprecise.net."
+local-data: "ubuntuprecise.net. 86400 IN TXT v=spf1 a mx ~all"
+local-zone: "255.168.192.in-addr.arpa." static
+local-data: "255.168.192.in-addr.arpa. 10800 IN NS ubuntuprecise.net."
+local-data: "255.168.192.in-addr.arpa. 10800 IN SOA ubuntuprecise.net. proxy.ubuntuprecise.net. 4 3600 1200 604800 864000"
+local-data: "1.42.168.192.in-addr.arpa. 10800 IN PTR ubuntuprecise.net."
 forward-zone:
 name: "."
 forward-addr: 8.8.8.8
 forward-addr: 8.8.4.4
-
- 
+forward-addr: 208.67.222.222
+forward-addr: 208.67.220.220
 remote-control:
 control-enable: yes
 control-interface: 127.0.0.1
+control-interface: 192.168.255.2
 control-port: 953
 server-key-file: "/etc/unbound/unbound_server.key"
 server-cert-file: "/etc/unbound/unbound_server.pem"
 control-key-file: "/etc/unbound/unbound_control.key"
 control-cert-file: "/etc/unbound/unbound_control.pem"
-
+EOF
