--- a/unbound.conf
+++ b/unbound.conf
@@ -63,7 +63,7 @@ local-data: "127.in-addr.arpa. 10800 IN NS localhost."
 local-data: "127.in-addr.arpa. 10800 IN SOA localhost. nobody.invalid. 2 3600 1200 604800 10800" 
 local-data: "1.0.0.127.in-addr.arpa. 10800 IN PTR localhost." 
        
-#zone tukang-sedot.net
+#zone abadinet
 local-zone: "abadinet." static
 local-data: "abadinet. 86400 IN NS ns1.abadinet."
 local-data: "abadinet. 86400 IN SOA abadinet. hostmaster.abadinet.  3 3600 1200 604800 86400"
@@ -91,5 +91,6 @@ server-key-file: "/etc/unbound/unbound_server.key"
 server-cert-file: "/etc/unbound/unbound_server.pem"
 control-key-file: "/etc/unbound/unbound_control.key"
 control-cert-file: "/etc/unbound/unbound_control.pem"
+
 
 
