--- a/unbound.conf
+++ b/unbound.conf
@@ -1,41 +1,43 @@
 server:
 verbosity: 1
 statistics-interval: 120
+num-threads: 4
 statistics-cumulative: yes
-num-threads: 2
 interface: 0.0.0.0
 port: 53
-
+ 
 outgoing-range: 512
 num-queries-per-thread: 1024
-
+ 
 msg-cache-size: 128m
-rrset-cache-size: 256m 
-
+rrset-cache-size: 256m
+so-rcvbuf: 8m
+ 
 msg-cache-slabs: 8
 rrset-cache-slabs: 8
-
+infra-cache-slabs: 8
+key-cache-slabs: 8
+ 
 cache-min-ttl: 600
 cache-max-ttl: 86400
 infra-host-ttl: 60
 infra-lame-ttl: 120
-         
+ 
 infra-cache-numhosts: 10000
 infra-cache-lame-size: 10k
-
+ 
 do-ip4: yes
-do-ip6: no
+do-ip6: yes
 do-udp: yes
 do-tcp: yes
 do-daemonize: yes
-
+ 
 access-control: 127.0.0.0/8 allow
-access-control: 127.0.0.2/8 allow
-access-control: 10.0.0.0/8 allow
+access-control: 192.168.0.0/24 allow
 access-control: 172.16.0.0/12 allow
 access-control: 192.168.0.0/16 allow
-access-control: ::1 allow
-      
+access-control: 192.168.255.2/24 allow
+ 
 chroot: "/etc/unbound"
 username: "unbound"
 directory: "/etc/unbound"
@@ -43,46 +45,24 @@ logfile: ""
 use-syslog: no
 pidfile: "/etc/unbound/unbound.pid"
 root-hints: "/etc/unbound/named.cache"
-
+ 
 identity: "DNS"
-version: "1.4"       
+version: "1.4"
 hide-identity: yes
 hide-version: yes
 harden-glue: yes
-do-not-query-localhost: no
+use-caps-for-id: yes
+harden-dnssec-stripped: yes
+do-not-query-address: 127.0.0.1/8
+do-not-query-localhost: yes
 module-config: "iterator"
-
-#zone localhost
-local-zone: "localhost." static 
-local-data: "localhost. 10800 IN NS localhost."
-local-data: "localhost. 10800 IN SOA localhost. nobody.invalid. 1 3600 1200 604800 10800" 
-local-data: "localhost. 10800 IN A 127.0.0.1" 
-
-local-zone: "127.in-addr.arpa." static 
-local-data: "127.in-addr.arpa. 10800 IN NS localhost." 
-local-data: "127.in-addr.arpa. 10800 IN SOA localhost. nobody.invalid. 2 3600 1200 604800 10800" 
-local-data: "1.0.0.127.in-addr.arpa. 10800 IN PTR localhost." 
-       
-#zone abadinet
-local-zone: "abadinet." static
-local-data: "abadinet. 86400 IN NS ns1.abadinet."
-local-data: "abadinet. 86400 IN SOA abadinet. hostmaster.abadinet.  3 3600 1200 604800 86400"
-local-data: "abadinet. 86400 IN A 192.168.2.254"
-local-data: "www.abadinet. 86400 IN A 192.168.2.254"
-local-data: "ns1.abadinet. 86400 IN A 192.168.2.254"
-
-local-zone: "2.168.192.in-addr.arpa." static
-local-data: "2.168.192.in-addr.arpa. 10800 IN NS abadinet."
-local-data: "2.168.192.in-addr.arpa. 10800 IN SOA abadinet. hostmaster.abadinet. 4 3600 1200 604800 864000"
-local-data: "254.2.168.192.in-addr.arpa. 10800 IN PTR abadinet."
-
-local-data: "www.google.co.id 86400 IN A 216.239.32.20"
-local-data: "www.google.com 86400 IN A 216.239.32.20"
-
-forward-zone: 
+  
+forward-zone:
 name: "."
-forward-addr: 127.0.0.1
-               
+forward-addr: 8.8.8.8
+forward-addr: 8.8.4.4
+
+ 
 remote-control:
 control-enable: yes
 control-interface: 127.0.0.1
